developer/src/kmc-package/test/fixtures/invalid/error_package_name_cannot_be_blank.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>15.0.266.0</KeymanDeveloperVersion>
    <FileVersion>7.0</FileVersion>
  </System>
  <Info>
    <!-- blank name -->
    <Name URL="">   </Name>
    <Copyright URL="">© 2019 National Research Council Canada</Copyright>
    <Author URL="mailto:Eddie.Santos@nrc-cnrc.gc.ca">Eddie Antonio Santos</Author>
    <Version>1.0.3</Version>
  </Info>
  <Files>
    <File>
      <Name>nokeyboardversion.kmx</Name>
      <Description>Keyboard Khmer Angkor</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.kmx</FileType>
    </File>
  </Files>
  <Keyboards>
    <Keyboard>
      <Name>Khmer Angkor</Name>
      <ID>nokeyboardversion</ID>
      <Version>1.3</Version>
      <Languages>
        <Language ID="km">Central Khmer (Khmer, Cambodia)</Language>
      </Languages>
    </Keyboard>
  </Keyboards>
</Package>
